Z-index fix

--- a/css/general.css
+++ b/css/general.css
@@ -41,7 +41,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  z-index: 0;
+  z-index: 1;
 }
 
 .header-top {
